--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
-title: "Growing with Me"  # 블로그 제목
-author: "MyeongALyeong"   # 작성자
-description: "Welcome to my GitHub Pages blog!"  # 블로그 설명
-theme: jekyll-theme-cayman  # 원하는 테마 (예: minima, hacker, slate 등)
+# _config.yml
+title: "Java Study Blog"
+description: "자바 언어 이론과 실습 정리용 기술 블로그"
+baseurl: "/MyeongALyeong.github.io"
+url: "https://MyeongALyeong.github.io"
+theme: minima
